# cutesy

./: .coverage.integration  .coverage.unit  .gitignore  .nitpick.toml  CLAUDE.md  Makefile  PROFILING_ANALYSIS.md  README.md  pyproject.toml  pyvenv.cfg  ruff.toml  settings.py  setup.cfg  setup.py  test_file.html  test_file2.html  ty.toml
.github/: dependabot.yml
.github/workflows/: build.yml  publish-to-pypi.yml
cutesy/: __init__.py  __main__.py  cli.py  foreign_content.py  linter.py  rules.py  types.py
cutesy/attribute_processors/: __init__.py  alpine.py  amp.py  attributes.py  constants.py  reindent.py  tailwind.py  types.py  whitespace.py
cutesy/attribute_processors/class_ordering/: __init__.py  tailwind.py  types.py
cutesy/preprocessors/: __init__.py  django.py  types.py
cutesy/utilities/: __init__.py  collections.py
docs/: axioms.md  configuration.md  development.md  distribution.md  installation.md  rules.md
docs/agents/: INDEX.md  architecture-decisions.md  codebase-patterns.md  common-pitfalls.md  testing-strategies.md
homebrew/: cutesy.rb
requirements/: base.txt  development.txt  test.txt
rust/: Cargo.toml
rust/src/: lib.rs
scripts/: __init__.py  update_axioms_md.py
tests/: __init__.py  test_against_spec.py  test_class_ordering.py  test_class_ordering_types.py  test_cli.py  test_cutesy.py  test_cutesy_spec.py  test_linter.py  test_main.py  test_options.py  test_preprocessor_types.py  test_rules.py  test_tailwind.py  test_types.py
tests/integration/: __init__.py  test_cutesy.py  test_tailwind.py
tests/private/: __init__.py  test_class_ordering.py  test_linter.py
tests/spec/0002_indentation/: expected_output.html  input.html
tests/spec/0003_whitespace/: expected_output.html
tests/spec/0004_dynamic/: expected_output.html  input.html
tests/spec/0005_attributes/: expected_output.html  input.html
tests/spec/cutesy/0001_basic_tailwind/: input.html
tests/spec/cutesy/0002_responsive_and_states/: input.html
tests/spec/cutesy/0003_arbitrary_values_and_variants/: expected_output.html  (+1 more)
tests/unit/: __init__.py  test_alpine.py  test_amp.py  test_attributes.py  test_blank_line_removal.py  test_class_ordering.py  test_class_ordering_types.py  test_cli.py  test_collections.py  test_cutesy.py  test_linter.py  test_main.py  test_preprocessor.py  test_preprocessor_django.py  test_reindent.py  test_rules.py  test_tailwind.py  test_types.py  test_whitespace.py
utilities/: __init__.py  base36.py
(+18 files in other folders)
