[package]
name = "cutesy-core"
version = "1.0.0-beta.21"
edition = "2021"
rust-version = "1.70"

[lib]
name = "cutesy_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
regex = "1.11"
once_cell = "1.21"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
